--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,10 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="88f576">  <td>22/04/18 14:57:38</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CreateEventTest.createNewEvent()[pri:0, instance:Tests.CreateEventTest@62df0ff3]">createNewEvent</td> 
-  <td>main@874189736</td>   <td></td> </tr>
-<tr bgcolor="88f576">  <td>22/04/18 14:57:37</td>   <td>-1861</td> <td>&nbsp;</td><td title="&gt;&gt;CreateEventTest.initialize()[pri:0, instance:Tests.CreateEventTest@62df0ff3]">&gt;&gt;initialize</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@874189736</td>   <td></td> </tr>
-<tr bgcolor="cd92d6">  <td>22/04/18 14:57:37</td>   <td>-1876</td> <td title="&gt;&gt;base.start()[pri:0, instance:Tests.CreateEventTest@62df0ff3]">&gt;&gt;start</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@874189736</td>   <td></td> </tr>
+<tr bgcolor="b4c3a9">  <td>22/04/20 15:22:05</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CreateEventTest.createNewEvent()[pri:0, instance:Tests.CreateEventTest@25fb8912]">createNewEvent</td> 
+  <td>main@124734309</td>   <td></td> </tr>
+<tr bgcolor="b4c3a9">  <td>22/04/20 15:22:03</td>   <td>-1511</td> <td>&nbsp;</td><td title="&gt;&gt;CreateEventTest.initialize()[pri:0, instance:Tests.CreateEventTest@25fb8912]">&gt;&gt;initialize</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@124734309</td>   <td></td> </tr>
+<tr bgcolor="61f6af">  <td>22/04/20 15:22:03</td>   <td>-1517</td> <td title="&gt;&gt;base.start()[pri:0, instance:Tests.CreateEventTest@25fb8912]">&gt;&gt;start</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@124734309</td>   <td></td> </tr>
 </table>
